# docs/api/swagger.yaml
@@ -255,6 +255,97 @@ paths:
       summary: Return a paginated set of all keywords
       tags:
       - keywords
+  /me:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.UserJSON'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httputil.ErrResponse'
+      summary: Get the current authenticated user
+      tags:
+      - users
+  /me/tokens:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.UserTokenJSON'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httputil.ErrResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.ErrResponse'
+      summary: Get all API tokens by user ID
+      tags:
+      - users
+    put:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.UserTokenJSON'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.ErrResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httputil.ErrResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.ErrResponse'
+      summary: Create a user API token
+      tags:
+      - users
+  /me/tokens/{id}:
+    delete:
+      parameters:
+      - description: token ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.UserTokenJSON'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.ErrResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httputil.ErrResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.ErrResponse'
+      summary: Revoke a user API token by ID
+      tags:
+      - users
   /modules:
     get:
       consumes:
@@ -498,97 +589,6 @@ paths:
       summary: Search for Cosmos SDK modules by name, team, description and keywords
       tags:
       - modules
-  /user:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.UserJSON'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/httputil.ErrResponse'
-      summary: Get the current authenticated user
-      tags:
-      - users
-  /user/tokens:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.UserTokenJSON'
-            type: array
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/httputil.ErrResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httputil.ErrResponse'
-      summary: Get all API tokens by user ID
-      tags:
-      - users
-    put:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.UserTokenJSON'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httputil.ErrResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/httputil.ErrResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httputil.ErrResponse'
-      summary: Create a user API token
-      tags:
-      - users
-  /user/tokens/{id}:
-    delete:
-      parameters:
-      - description: token ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.UserTokenJSON'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httputil.ErrResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/httputil.ErrResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httputil.ErrResponse'
-      summary: Revoke a user API token by ID
-      tags:
-      - users
   /users:
     get:
       consumes:
